--- a/.github/workflows/issue.yml
+++ b/.github/workflows/issue.yml
@@ -27,9 +27,13 @@ jobs:
       - name: Check if flake8 report exists and create issues
         run: |
           if [ -f "flake8-report.json" ]; then
+            # Ensure the flake8-report.json is a valid JSON file
+            echo "Validating the JSON report"
+            cat flake8-report.json
+
             # Extract issues from flake8 JSON output
             issues=$(cat flake8-report.json | jq -r '.[] | "\(.message) - Line: \(.line) Column: \(.column)"')
-            
+
             # If no issues found, exit early
             if [ -z "$issues" ]; then
               echo "No issues found by flake8"
@@ -45,4 +49,7 @@ jobs:
                 "https://api.github.com/repos/${{ github.repository }}/issues" \
                 -w "\nResponse code: %{http_code}\n"
             done
+          else
+            echo "No flake8 report found. Exiting."
+            exit 1
           fi
